# jsonschema

./: .editorconfig  .gitattributes  .gitignore  .npmignore  .pre-commit-hooks.yaml  Brewfile  CMakeLists.txt  CONTRIBUTING.markdown  DEPENDENCIES  Dockerfile  Dockerfile.test.alpine  LICENSE  Makefile  README.markdown  VERSION  action.yml  cli.js  eslint.config.mjs  install  npm-deploy.sh  npm-pack.sh  package-lock.json  package.json  pip-deploy.sh  release.sh  snapcraft.yaml  vendorpull.mask
.github/workflows/: package.yml  snap.yml  test.yml
cmake/: CompilerOptions.cmake  FindAlterSchema.cmake  FindBearSSL.cmake  FindBlaze.cmake  FindCAres.cmake  FindCPR.cmake  FindCURL.cmake  FindCodegen.cmake  FindCore.cmake  FindHydra.cmake  FindJSONBinPack.cmake  FindJSONToolkit.cmake  FindMbedTLS.cmake  FindNghttp2.cmake  FindNoa.cmake  FindPSL.cmake  FindTermColor.cmake  FindZLIB.cmake  fetch-github-releases.cmake
completion/: jsonschema.bash  jsonschema.fish  jsonschema.zsh
docs/: bundle.markdown  canonicalize.markdown  ci.markdown  codegen.markdown  compat.markdown  compile.markdown  configuration.markdown  decode.markdown  default.markdown  encode.markdown  format.markdown  frame.markdown  identify.markdown  inspect.markdown  install.markdown  lint.markdown  metaschema.markdown  rdf.markdown  test.markdown  upgrade.markdown  validate.markdown  version.markdown
npm/: cjs.test.js  cli.js  main.js  postinstall.js  spawn.test.js  spawn.test.mjs
patches/curl/: 0001-fix-schannel-alpn-init-order.patch
snap/: snapcraft.yaml
src/: CMakeLists.txt  command.h  command_bundle.cc  command_canonicalize.cc  command_ci.cc  command_codegen.cc  command_compat.cc  command_compatibility.cc  command_compile.cc  command_decode.cc  command_default.cc  command_encode.cc  command_fmt.cc  command_frame.cc  command_help.cc  command_identify.cc  command_inspect.cc  command_install.cc  command_lint.cc  command_metaschema.cc  command_rdf.cc  command_test.cc  command_upgrade.cc  command_validate.cc  command_version.cc  compatibility.cc  compatibility.h  configuration.h  configure.h.in  dependencies.h  error.h  exit_code.h  http.h  input.h  logger.h  main.cc  resolver.h  test.h  utils.cc  utils.h
src/http/: CMakeLists.txt  error.cc  http.h  http_curl.cc  http_darwin.mm  http_windows.cc  request.cc  response.cc  status.cc  stream_curl.cc
src/http/include/sourcemeta/jsonschema/: http.h  http_error.h  http_method.h  http_request.h  http_response.h  http_status.h  http_stream.h
src/lint/: enum_with_type.h
test/: CMakeLists.txt  autocomplete_bash.sh  autocomplete_zsh.sh  bundle_into_resolve_directory.sh  bundle_non_remote.sh  bundle_remote_directory.sh  bundle_remote_directory_without_id.sh  bundle_remote_no_http.sh  bundle_remote_single_schema.sh  flag_with_value.sh  format_check_single_fail.sh  format_check_single_fail_indentation.sh  format_check_single_invalid.sh  format_check_single_pass.sh  format_check_single_pass_indentation.sh  format_check_single_pass_keep_ordering.sh  format_check_yaml.sh  format_cwd.sh  format_directory.sh  format_directory_ignore_directory.sh  format_directory_ignore_file.sh  format_invalid_path.sh  format_multi_extension.sh  format_single.sh  format_single_intact_mtime.sh  format_single_keep_ordering.sh  format_yaml.sh  frame.sh  frame_json_output.sh  help.sh  help_option_long.sh  help_option_short.sh  lint_fail.sh  lint_fix.sh  lint_pass.sh  metaschema_fail_directory.sh  metaschema_fail_non_schema.sh  metaschema_fail_single.sh  metaschema_pass_cwd.sh  metaschema_pass_single.sh  (+27 more)
test/bundle/: fail_anchor_collision.sh  fail_bigint.sh  fail_default_dialect_config_extension_mismatch.sh  fail_invalid_header.sh  fail_invalid_id_type.sh  fail_invalid_schema_uri.sh  fail_no_schema.sh  fail_ref_in_bundled_resolves_against_file_path.sh  fail_relative_external_ref_missing.sh  fail_resolve_duplicate.sh  fail_resolve_invalid_json.sh  fail_schema_invalid_json.sh  fail_stdin_invalid_json.sh  fail_stdin_not_schema.sh  fail_unknown_metaschema.sh  pass_2020_12_http.sh  pass_bigint.sh  pass_boolean_schema_default_dialect.sh  pass_bundled_metaschema.sh  pass_config_ignore.sh  pass_custom_extension_json.sh  pass_custom_extension_yaml.sh  pass_draft3_https.sh  pass_draft7_https.sh  pass_into_resolve_directory.sh  pass_ref_in_bundled_resolves_against_id.sh  pass_resolve_config_match.sh  pass_resolve_config_match_implicit_extension_config.sh  pass_resolve_config_match_implicit_extension_ref.sh  pass_resolve_deduplicate_embedded.sh  pass_resolve_default_dialect_config.sh  pass_resolve_default_dialect_config_relative.sh  pass_resolve_directory.sh  pass_resolve_directory_debug.sh  pass_resolve_directory_verbose.sh  pass_resolve_installed_dependency.sh  pass_resolve_installed_dependency_by_uri.sh  pass_resolve_metaschema.sh  pass_resolve_no_identifier.sh  pass_resolve_single.sh  (+11 more)
test/canonicalize/: fail_invalid_id_type.sh  fail_invalid_schema_uri.sh  fail_no_schema.sh  fail_non_schema.sh  fail_schema_invalid_json.sh  fail_stdin_invalid_json.sh  fail_stdin_not_schema.sh  fail_unknown_metaschema.sh  pass_1.sh  pass_2020_12_http.sh  pass_custom_extension_json.sh  pass_custom_extension_yaml.sh  pass_default_dialect.sh  pass_draft7_https.sh  pass_input_unmodified.sh  pass_resolve.sh  pass_stdin.sh  pass_without_extension_json.sh  pass_without_extension_yaml.sh  pass_yaml.sh
test/ci/: bundle_remote_http.sh  fail_bundle_http_non_200.ps1  fail_bundle_http_non_200.sh  fail_bundle_http_non_200_verbose.sh  fail_bundle_http_non_schema.ps1  fail_bundle_http_non_schema.sh  fail_bundle_http_non_schema_verbose.sh  fail_ci_corrupted_lock_invalid_format.sh  fail_ci_corrupted_lock_json.sh  fail_ci_hash_mismatch.sh  fail_ci_invalid_json_configuration.sh  fail_ci_multiple_errors.sh  fail_ci_no_configuration.sh  fail_ci_no_lock_file.sh  fail_ci_orphaned.sh  fail_ci_path_mismatch.sh  fail_ci_untracked.sh  fail_ci_written_hash_mismatch.sh  fail_metaschema_schema_http_404.sh  fail_metaschema_schema_http_non_schema.sh  fail_validate_http_missing_curl.sh  fail_validate_http_non_200.ps1  fail_validate_http_non_200.sh  (+40 more)
(+1107 files in other folders)
