# On Apple and Windows platforms, HTTP requests are served by the
# operating system networking stack. Everywhere else, they go through
# cURL (by default vendored alongside its dependencies)
if(APPLE)
  add_library(jsonschema_http STATIC http.h http_darwin.mm)
  set_source_files_properties(http_darwin.mm
    PROPERTIES COMPILE_OPTIONS "-fobjc-arc")
  target_link_libraries(jsonschema_http PRIVATE "-framework Foundation")
  target_link_libraries(jsonschema_http PRIVATE sourcemeta::core::text)
elseif(WIN32 AND NOT CMAKE_SYSTEM_NAME STREQUAL "MSYS")
  add_library(jsonschema_http STATIC http.h http_windows.cc)
  target_link_libraries(jsonschema_http PRIVATE winhttp)
  target_link_libraries(jsonschema_http PRIVATE sourcemeta::core::unicode)
else()
  if(JSONSCHEMA_USE_SYSTEM_CURL)
    list(REMOVE_ITEM CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
    find_package(CURL REQUIRED)
    list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
  else()
    find_package(MbedTLS REQUIRED)
    find_package(Nghttp2 REQUIRED)
    if(NOT CMAKE_SYSTEM_NAME STREQUAL "MSYS")
      find_package(CAres REQUIRED)
    endif()
    find_package(PSL REQUIRED)
    find_package(ZLIB REQUIRED)
    find_package(CURL REQUIRED)
  endif()

  add_library(jsonschema_http STATIC http.h http_curl.cc)
  target_link_libraries(jsonschema_http PRIVATE CURL::libcurl)
endif()

sourcemeta_add_default_options(PRIVATE jsonschema_http)
target_link_libraries(jsonschema_http PUBLIC sourcemeta::core::http)
target_include_directories(jsonschema_http PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
set_target_properties(jsonschema_http PROPERTIES FOLDER "jsonschema/http")
