if(APPLE)
  add_library(jsonschema_http STATIC http.h http_darwin.mm)
  set_source_files_properties(http_darwin.mm
    PROPERTIES COMPILE_OPTIONS "-fobjc-arc")
  target_link_libraries(jsonschema_http PRIVATE "-framework Foundation")
  target_link_libraries(jsonschema_http PRIVATE sourcemeta::core::text)
elseif(WIN32 AND NOT CMAKE_SYSTEM_NAME STREQUAL "MSYS")
  add_library(jsonschema_http STATIC http.h http_windows.cc)
  target_link_libraries(jsonschema_http PRIVATE winhttp)
  target_link_libraries(jsonschema_http PRIVATE sourcemeta::core::unicode)
else()
  add_library(jsonschema_http STATIC http.h http_curl.cc)
  if(JSONSCHEMA_USE_SYSTEM_CURL)
    find_package(CURL REQUIRED)
    target_compile_definitions(jsonschema_http PRIVATE JSONSCHEMA_USE_SYSTEM_CURL)
    target_link_libraries(jsonschema_http PRIVATE CURL::libcurl)
  else()
    target_link_libraries(jsonschema_http PRIVATE ${CMAKE_DL_LIBS})
  endif()
endif()

sourcemeta_add_default_options(PRIVATE jsonschema_http)
target_link_libraries(jsonschema_http PUBLIC sourcemeta::core::http)
target_include_directories(jsonschema_http PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
set_target_properties(jsonschema_http PROPERTIES FOLDER "jsonschema/http")
